ircv3_parse_derive/tests/ui/de/fail/invalid_value.rs
use ircv3_parse_derive::FromMessage;

#[derive(FromMessage)]
struct A {
    #[irc(source = "invalid")]
    field: String,
}

#[derive(FromMessage)]
struct B {
    #[irc(param = "first")]
    field: String,
}

fn main() {}
